add explicit validation with a further step

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -687,9 +687,9 @@
                     let url = ''
                     if (record.flag) {
                         url =
-                            '{{ url_for("supercon.unflag_record", id = "id") }}'
+                            '{{ url_for("supercon.reset_record", id = "id") }}'
                     } else {
-                        url = '{{ url_for("supercon.flag_record", id = "id") }}'
+                        url = '{{ url_for("supercon.mark_record_invalid", id = "id") }}'
                     }
                     url = url.replace(
                         "id",
