--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -126,7 +126,7 @@
                         <v-icon small class="mr-1" @click="markRecordInvalid(item)" title="Mark as invalid">
                             mdi-thumb-down
                         </v-icon>
-                        <v-icon small class="mr-1" @click="resetRecord(item)" title="Reset">
+                        <v-icon small class="mr-1" @click="resetRecord(item)" title="Reset status">
                             mdi-restart
                         </v-icon>
                         <v-icon small class="mr-1" @click="openEditItemDialog(item)" title="Edit">
