fix entity id filter

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -291,7 +291,7 @@
                         {#{ text: 'Path', value: 'path', hidden: true, filter: this.pathFilter, filterKeyword: '', shouldHideEmpty: false },#}
                         {#{ text: 'Filename', value: 'filename', hidden: true, filter: this.filenameFilter, filterKeyword: '', shouldHideEmpty: false },#}
                         { text: 'Document', value: 'hash', hidden: false, filter: this.hashFilter, filterKeyword: "{{hash}}", width: 120, shouldHideEmpty: false },
-                        { text: 'Entity ID', value: 'id', hidden: false, filter: this.hashFilter, shouldHideEmpty: false, width: 120, },
+                        { text: 'Entity ID', value: 'id', hidden: false, filter: this.idFilter, filterKeyword: '', shouldHideEmpty: false, width: 120, },
                         { text: 'Timestamp', value: 'timestamp', hidden: true, filter: this.timestampFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'DOI', value: 'doi', hidden: false, filter: this.doiFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Authors', value: 'authors', width: 300, hidden: true, filter: this.authorsFilter, filterKeyword: '', shouldHideEmpty: false },
@@ -659,6 +659,9 @@
                 },
                 hashFilter(_, __, item) {
                     return this.keywordFilter(this.headerObject.hash, item.hash)
+                },
+                idFilter(_, __, item) {
+                    return this.keywordFilter(this.headerObject.id, item.id)
                 },
                 timestampFilter(_, __, item) {
                     return this.keywordFilter(this.headerObject.timestamp, item.timestamp)
