remove sup from <title>

--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>SuperCon<sup>2</sup> | Document viewer</title>
+    <title>SuperCon2 | Document viewer</title>
     <script>
         var annotation_url = "{{ url_for('supercon.get_annotations', hash="_HASH_") }}"
         var pdf_document_url = "{{ url_for('supercon.get_binary', hash="_HASH_") }}"
