--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>SuperCon<sup>2</sup></title>
+    <title>SuperCon2</title>
     <link rel="icon" type="image/x-icon" href="/static/resources/img/favicon.ico"/>
     <link rel="shortcut icon" type="image/x-icon" href="static/resources/img/favicon.ico"/>
 
