--- a/supercon2/templates/stats.html
+++ b/supercon2/templates/stats.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>SuperCon<sup>2</sup> | Statistics</title>
+    <title>SuperCon2 | Statistics</title>
     <link rel="icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico') }}/>
     <link rel="shortcut icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico') }}/>
 
