add page for curation log

--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -47,6 +47,7 @@
                     <li><a href="{{ url_for('supercon.get_automatic_database') }}">Database</a></li>
                     <li><a href="{{ url_for('supercon.get_stats') }}">Statistics</a></li>
                     <li><a href="{{ url_for('supercon.get_training_data') }}">Training data management</a></li>
+                    <li><a href="{{ url_for('supercon.get_correction_log') }}">Data correction log</a></li>
                     <li><a href="http://falcon.nims.go.jp/superconductors" target="_blank">Grobid superconductors</a>
                     <li><a href="https://github.com/lfoppiano/supercon2">GitHub repository</a></li>
                     </li>
@@ -62,6 +63,11 @@
                 <p>
                     <strong>References</strong>
                     <ul>
+                        <li>
+                            Luca Foppiano, Pedro Baptista de Castro, Pedro Ortiz Suarez, Kensei Terashima,
+                            Yoshihiko Takano & Masashi Ishii (2022) Automatic extraction of materials and properties
+                            from superconductors scientific literature. 2022 (in-press). ⟨hal-03776658⟩
+                        </li>
                         <li>Luca Foppiano, Sae Dieb, Akira Suzuki, Pedro Baptista de Castro, Suguru Iwasaki, Azusa Uzuki, 
                             Miren Garbine Esparza Echevarria, Yan Meng, Kensei Terashima, Laurent Romary, Yoshihiko Takano & 
                             Masashi Ishii (2021) SuperMat: construction of a linked annotated dataset from 
