Fix table and dialogs

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -465,11 +465,13 @@
                 itemDialogTitle() {
                     switch (this.itemDialog.mode) {
                         case 'edit':
-                            return 'Edit the record'
+                            return 'Edit record'
                         case 'new':
-                            return 'Add a new record'
+                            return 'Add new record'
                         case 'remove':
-                            return 'Remove the record'
+                            return 'Remove record'
+                        case 'view':
+                            return 'View record'
                     }
                 }
             },
