patch value resolution in the UI #125

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -360,7 +360,7 @@
                             label: '*Error type',
                             rules: [(value) => !!value || 'This field is required'],
                             errorMessages: [],
-                            selectBoxItems: ['From table', 'Extraction', 'Linking', 'Tc classification', 'Composition resolution' ]
+                            selectBoxItems: ['From table', 'Extraction', 'Linking', 'Tc classification', 'Composition resolution', 'Value resolution']
                         }]
                     }, {
                         config: {
