add 'removed' as status

--- a/supercon2/templates/correction_log.html
+++ b/supercon2/templates/correction_log.html
@@ -242,7 +242,7 @@
                                 { value: 'invalid',   icon: 'mdi-thumb-down' }
                             ],
                             selectItems: [
-                                'all', 'new', 'curated', 'validated', 'invalid', 'obsolete', 'empty'
+                                'all', 'new', 'curated', 'validated', 'invalid', 'obsolete', 'removed'
                             ]
                         },
                         { text: 'Actions', value: 'actions', sortable: false, hidden: false },
